# Smart-Home-Guard

./: .gitattributes  .gitignore  README.md  UART_FT232RL_WIRING.md
model/: .gitignore  README.md  app.py  export_onnx.py  guard_action.yaml  requirements.txt  train.py
pc_controller/: README.md  board_autostart_mjpg.sh  controller_config.json  requirements.txt  run.bat  serial_debug.py  zone_config.json  zone_controller.py
ssne_ai_yolo_coco/: CMakeLists.txt  demo_yolo_coco.cpp
ssne_ai_yolo_coco/app_assets/: alert.ssbmp
ssne_ai_yolo_coco/app_assets/models/: README.md
ssne_ai_yolo_coco/cmake_config/: Paths.cmake
ssne_ai_yolo_coco/include/: coco_config.hpp  coco_detector.hpp  coco_types.hpp  common.hpp  debounce_tracker.hpp  gpio_alarm_controller.hpp  osd-device.hpp  uart_control_channel.hpp  utils.hpp
ssne_ai_yolo_coco/scripts/: run.sh
ssne_ai_yolo_coco/src/: coco_detector.cpp  gpio_alarm_controller.cpp  osd-device.cpp  pipeline_image.cpp  uart_control_channel.cpp  utils.cpp
tools/: gen_alert_ssbmp.py
